Remove agl pacth which is conflict with Weston ivi-shell and ivi-controller
Change-Id: I9cbc0b7c72e32f8e77253d3295434e95e098a991
Signed-off-by: Lei Ma <leima@codeaurora.org>

--- a/meta-qti-agl/conf/distro/automotive.conf
+++ b/meta-qti-agl/conf/distro/automotive.conf
@@ -22,3 +22,4 @@ BBMASK .= "|meta-agl/meta-agl-profile-graphical/recipes-graphics/wayland/weston_
 BBMASK .= "|meta-agl/meta-agl-profile-core/recipes-test/freetype/freetype_2.9.1.bbappend"
 BBMASK .= "|meta-qti-bsp/meta-qti-base/recipes-audio/pulseaudio/pulseaudio_%.bbappend"
 BBMASK .= "|meta-agl/meta-agl-profile-graphical/recipes-graphics/wayland/weston-init.bbappend"
+BBMASK .= "|meta-agl/meta-agl-profile-graphical/recipes-graphics/wayland/weston_5.0.0.bbappend"
