connman: fix connman-conf doesn't work
connman in metal-agl layer breaks connman-conf
mask it, use connman provided by yocto instead

Change-Id: I5a24f79df623bc94665da0d0bdf296d417441115
Signed-off-by: Lei wang <leiwan@codeaurora.org>

--- a/meta-qti-agl/conf/distro/automotive.conf
+++ b/meta-qti-agl/conf/distro/automotive.conf
@@ -23,3 +23,4 @@ BBMASK .= "|meta-agl/meta-agl-profile-core/recipes-test/freetype/freetype_2.9.1.
 BBMASK .= "|meta-qti-bsp/meta-qti-extra/recipes-audio/pulseaudio/pulseaudio_%.bbappend"
 BBMASK .= "|meta-agl/meta-agl-profile-graphical/recipes-graphics/wayland/weston-init.bbappend"
 BBMASK .= "|meta-agl/meta-agl-profile-graphical/recipes-graphics/wayland/weston_5.0.0.bbappend"
+BBMASK .= "|meta-agl/meta-agl-profile-core/recipes-connectivity/connman/"
