Set DISTRO to weak assignment.
Change-Id: Id582823a3e87e70ec1b8521a633be686efac7b48
Signed-off-by: Yingzhong.Zha <yzha@codeaurora.org>

--- a/meta-qti-base/conf/machine/qtiquingvm.conf
+++ b/meta-qti-base/conf/machine/qtiquingvm.conf
@@ -9,7 +9,7 @@ include conf/machine/include/bbmask.inc
 SERIAL_CONSOLE = "115200 ttyAMA0"
 
 # EMMC TARGET TO SUPPORT 64-bit kernel
-DISTRO = "automotive"
+DISTRO ??= "automotive"
 DEFAULTTUNE = "aarch64"
 
 # Sizes for EXT4 (in bytes)
