--- a/meta-qti-base/conf/machine/sa8155ivi.conf
+++ b/meta-qti-base/conf/machine/sa8155ivi.conf
@@ -6,7 +6,7 @@ BASEMACHINE ?= "sa8155ivi"
 include conf/machine/include/auto-common.inc
 
 # EMMC TARGET TO SUPPORT 64-bit kernel
-DISTRO = "automotive"
+DISTRO ??= "automotive"
 DEFAULTTUNE = "aarch64"
 MACHINE_FEATURES += "dt-overlay"
 
