--- a/meta-qti-base/conf/machine/sa8155qdrive.conf
+++ b/meta-qti-base/conf/machine/sa8155qdrive.conf
@@ -7,7 +7,7 @@ include conf/machine/include/auto-common.inc
 
 
 # EMMC TARGET TO SUPPORT 64-bit kernel
-DISTRO = "automotive"
+DISTRO ??= "automotive"
 DEFAULTTUNE = "aarch64"
 MACHINE_FEATURES += "dt-overlay"
 
