added DISTRO_FEATURE q-hypervisor
added DISTRO_FEATURE "q-hypervisor" for hypervisor projects

Change-Id: Iba7d12f1b6a9b99ade33025f5e85635abe0de1f8
Signed-off-by: Guojun Qian <guojunq@codeaurora.org>

--- a/meta-qti-base/conf/machine/qtiquingvm.conf
+++ b/meta-qti-base/conf/machine/qtiquingvm.conf
@@ -34,3 +34,4 @@ KERNEL_IMAGETYPE = "Image-dtb"
 IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
 
 DISTRO_FEATURES_append= " ab-boot-support"
+DISTRO_FEATURES_append= " q-hypervisor"
