--- a/meta-qti-base/recipes-connectivity/connman/connman-conf/main.conf
+++ b/meta-qti-base/recipes-connectivity/connman/connman-conf/main.conf
@@ -3,6 +3,6 @@
 # the others are default one
 
 [General]
-NetworkInterfaceBlacklist = vmnet,vboxnet,virbr,ifb,ve-,vb-,p2p
+NetworkInterfaceBlacklist = vmnet,vboxnet,virbr,ifb,ve-,vb-,p2p,eth0,eth1
 PreferredTechnologies = ethernet,wifi,tun,cellular
 TetheringTechnologies = ethernet,wifi
