--- a/meta-qti-base/conf/machine/sa8195.conf
+++ b/meta-qti-base/conf/machine/sa8195.conf
@@ -43,4 +43,4 @@ KERNEL_IMAGETYPE = "Image.gz-dtb"
 IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
 
 DISTRO_FEATURES_append = " ab-boot-support"
-IMAGE_FEATURES_append = " read-only-rootfs"
+#IMAGE_FEATURES_append = " read-only-rootfs"
