Refine the distro/machine configurations.
Change-Id: I26b6522d63af7099d84008e254dbe68e669ec425
Signed-off-by: Yong Zhang <zyong@codeaurora.org>

--- a/meta-qti-base/conf/distro/automotive.conf
+++ b/meta-qti-base/conf/distro/automotive.conf
@@ -15,12 +15,25 @@ DISTRO_FEATURES_append = " pam"
 DISTRO_FEATURES_append = " wayland"
 
 # Use synergy, disable bluez
-DISTRO_FEATURES_remove = " bluez5 bluetooth"
+DISTRO_FEATURES_BACKFILL_CONSIDERED += "bluez5 bluetooth"
 
 #Enable persist-image
 DISTRO_FEATURES_append = " persist-image "
 PERSIST_IMAGE_ROOTFS_SIZE ?= "128M"
 
 DISTRO_FEATURES += "early-eth"
+
+DISTRO_FEATURES_append = " ab-boot-support"
+
+# Use systemd init manager.
+DISTRO_FEATURES_append = " systemd"
+DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
+VIRTUAL-RUNTIME_dev_manager = "udev"
+VIRTUAL-RUNTIME_init_manager = "systemd"
+
+IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
+KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains('DISTRO_FEATURES', 'selinux', '', 'androidboot.selinux=permissive', d)}"
+
+INCOMPATIBLE_LICENSE = "GPL-3.0 LGPL-3.0 AGPL-3.0"
 
 include ${DISTRO_INC_FILES}
