Use BASEMACHINE instead of MACHINE name.
Support user to define new machine name.

Change-Id: I0ea61e72aa1f80aa9cbc6c1fdcc442273331718d
Signed-off-by: Yong Zhang <zyong@codeaurora.org>

--- a/meta-qti-base/conf/distro/automotive.conf
+++ b/meta-qti-base/conf/distro/automotive.conf
@@ -6,7 +6,7 @@ DISTROOVERRIDES =. "automotive:"
 
 PRODUCT = "automotive"
 
-DEPLOY_NAME_BASE="${MACHINE}-automotive"
+DEPLOY_NAME_BASE="${BASEMACHINE}-automotive"
 
 # Support systemd-user-session
 DISTRO_FEATURES_append = " pam"
