Enable the read-only-rootfs image feature for sa6155.
Change-Id: I9c57c051415366dac4135d553d906cf88f26ae8e
Signed-off-by: Nan Zhang <nanzha@codeaurora.org>

--- a/meta-qti-base/conf/machine/sa6155.conf
+++ b/meta-qti-base/conf/machine/sa6155.conf
@@ -30,3 +30,4 @@ KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'an
 KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains('IMAGE_FEATURES', 'read-only-rootfs', 'rw', '', d)}"
 KERNEL_IMAGETYPE = "Image-dtb"
 
+IMAGE_FEATURES_append = " read-only-rootfs"
