sa8195: enable read-only-rootfs and update fstab
Change-Id: I524fbd92605130a277ec7b285193ca1d01566ae1
Signed-off-by: Xubao Jiang <xubaoj@codeaurora.org>

--- a/meta-qti-base/conf/machine/sa8195.conf
+++ b/meta-qti-base/conf/machine/sa8195.conf
@@ -32,4 +32,4 @@ KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains('IMAGE_FEATURES', 'read-only-ro
 KERNEL_IMAGETYPE = "Image.gz-dtb"
 
 
-#IMAGE_FEATURES_append = " read-only-rootfs"
+IMAGE_FEATURES_append = " read-only-rootfs"
