--- a/meta-qti-base/conf/machine/qtiquingvm.conf
+++ b/meta-qti-base/conf/machine/qtiquingvm.conf
@@ -32,3 +32,4 @@ KERNEL_IMAGETYPE = "Image-dtb"
 
 IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
 
+IMAGE_FEATURES_append = " read-only-rootfs"
