sa8155qdrive: enable the read-only-rootfs image feature.
Change-Id: I05585e6eb76bf4f179241c1261511d213d61b711
Signed-off-by: Nan Zhang <nanzha@codeaurora.org>

--- a/meta-qti-base/conf/machine/sa8155qdrive.conf
+++ b/meta-qti-base/conf/machine/sa8155qdrive.conf
@@ -36,3 +36,5 @@ KERNEL_IMAGETYPE = "Image-dtb"
 # Yocto2.6/ROS excludes 
 BBMASK .= "|meta-ros/recipes-support/poco/poco_1.7.4.bb"
 BBMASK .= "|meta-openembedded/meta-python/recipes-devtools/python/python-pbr_4.2.0.bb"
+
+IMAGE_FEATURES_append = " read-only-rootfs"
